--- a/.htaccess
+++ b/.htaccess
@@ -1,36 +1,20 @@
-Deny from all
+#Deny from all
 
-#RewriteEngine on
-#RewriteBase /Cutter/
-#RewriteCond $1 !^(index.php|resources|robots.txt)
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteRule ^(.*)$ index.php/$1 [L,QSA]
+#Mod Rewrite rules below must be applied directly for local Abyss Web Server.
+#see http://aprelium.com/abyssws/articles/urlrewriting-modrewrite-conversion.html for details
+<IfModule mod_rewrite.c>
+    RewriteEngine on
+    #RewriteBase /Cutter
+    RewriteCond $1 !^(index\.php|resources|robots\.txt)
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^(.*)$ index.php/$1 [L]
+</IfModule>
 
-#https://ellislab.com/codeigniter/user-guide/general/urls.html
-#RewriteEngine on
-#RewriteCond $1 !^(index\.php|images|robots\.txt)
-#RewriteRule ^(.*)$ /index.php/$1 [L]
+<IfModule !mod_rewrite.c>
+  # If we don't have mod_rewrite installed, all 404's
+  # can be sent to index.php, and everything works as normal.
+  # Submitted by: ElliotHaughin
 
-#https://docs.expressionengine.com/latest/urls/remove_index.php.html
-#<IfModule mod_rewrite.c>
-        #RewriteEngine On
-        #RewriteBase /
-
-        # Removes index.php from ExpressionEngine URLs
-        #RewriteCond %{THE_REQUEST} ^GET.*index\.php [NC]
-        #RewriteCond %{REQUEST_URI} !/system/.* [NC]
-        #RewriteRule (.*?)index\.php/*(.*) /$1$2 [R=301,NE,L]
-
-        # Directs all EE web requests through the site index file
-        #RewriteCond %{REQUEST_FILENAME} !-f
-        #RewriteCond %{REQUEST_FILENAME} !-d
-        #RewriteRule ^(.*)$ /index.php/$1 [L]
-#</IfModule>
-
-#http://stackoverflow.com/questions/19183311/codeigniter-removing-index-php-from-url
-#RewriteEngine on
-#RewriteCond $1 !^(index\.php|resources|robots\.txt)
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
-#RewriteRule ^(.*)$ index.php/$1 [L,QSA]
+  ErrorDocument 404 /index.php
+</IfModule>
